# ELFChatBot

./: .env  .env.prod  README.md  __init__.py  bot.py  chatgpt_cf_proxy.js  pyproject.toml  requirements.txt  setup.py
elfchatbot/plugins/: ELF_bot.py
elfchatbot/plugins/ELFChatBot/: ELF_bot.py  Random_bot.py  __init__.py  chatgpt_bot.py  config.py
elfchatbot/plugins/ELFChatBot/ChatBotApi/: __init__.py  baiduBot.py  chatgpt.py  txbot.py
elfchatbot/plugins/FuckMsg/: __init__.py  config.py  fuckmsg.py  fuckmsgs.py
plugins/: ELF_bot.py
plugins/ChatBotApi/: baiduBot.py
src/plugins/ELFChatBot/: __init__.py
src/plugins/ELFChatBot/plugins/: ELF_bot.py  Random_bot.py  single_session.py
src/plugins/ELFChatBot/plugins/ChatBotApi/: baiduBot.py  txbot.py
src/plugins/FuckMsg/: __init__.py
src/plugins/FuckMsg/plugins/: fuckmsg.py  fuckmsgs.py
