[tool.poetry]
name = "ELFChatBot"
version = "1.0.0"
description = "闲聊QQ机器人，也就是人工智障"
authors = ["Quan666"]
license = "GPL v3"
readme = "README.md"

homepage = "https://github.com/Quan666/ELFChatBot"
repository = "https://github.com/Quan666/ELFChatBot"
keywords = ["nonebot", "nonebot2", "闲聊" ,"elf" ,"智能"]

[tool.poetry.dependencies]
nonebot-adapter-onebot = "^2.1.5"
nonebot-plugin-apscheduler = "^0.2.0"
nonebot-plugin-guild-patch = "^0.2.1"
nonebot2 = "^2.0.0rc1"
httpx = "^0.22.0"
nb-cli = "^0.6.7"
pydantic = "^1.10.2"
typing-extensions = "^4.4.0"
[tool.poetry.dev-dependencies]
nb-cli = "^0.6.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
